--- a/sass/modules/_homepage.scss
+++ b/sass/modules/_homepage.scss
@@ -1,11 +1,8 @@
+
 .videoCon {
+    // padding: 0 30px;
 
     video {
         max-width: 100%;
     }
-}
-
-
-.footer {
-    visibility: hidden;
 }
