--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,13 @@
+<section class="wrapper">
+    
+
 <div class="videoCon">
-    <video poster="/images/demovideoposter.jpg" controls>
+    <video poster="/images/demovideoposter.jpg" controls autoplay>
         <source src="/images/DemoReel.mp4" type="video/mp4">
+        <source src="/images/DemoReel.ogv" type="video/ogv">
+        Your browser does not support the video tag
     </video>
 </div>
+
+</section>
 
