--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -7,8 +7,6 @@
 }
 
 .homeCon {
-    margin: 0 15px;
-    border: 0.6px solid;
 
     h1 {
     font-size: 64px;
@@ -19,26 +17,32 @@
     }
 
      p {
-    font-size: 12px;
+    font-size: 20px;
     font-weight: 500;
-    margin: 0 30px 30px 30px;
-    line-height: 17px;
+    margin: 0 30px 50px 30px;
+    line-height: 1.6;
+    letter-spacing: 0.05em;
     }
 }
 
 .skillsCon {
     text-align: center;
     padding: 0 40px;
+    background-color: $main-color;
 
-    h1 {font-size: 23px; font-weight: 500; margin-bottom: 30px;}
-    p {font-size: 16px;}
-    div {margin-bottom: 50px;}
+    h1 {font-size: 24px; font-weight: 600; margin-bottom: 30px; color: white;}
+    p {font-size: 18px; color: white;}
 }
+
+.homeskills {
+    padding-bottom: 65px;
+}
+
 #skills {
-    text-align: left;
-    font-size: 28px;
+    font-size: 50px;
     font-weight: 600;
-    margin: 40px 0 55px 0;
+    padding: 65px 0 60px 0;
+    margin: 0;
 }
 
 
@@ -50,7 +54,6 @@
 
 @media screen and (min-width:680px) {
     .homeCon {
-        border: 1px solid;
 
         h1 {
             font-size: 123px;
@@ -58,9 +61,7 @@
         }
 
         p {
-            font-size: 18px;
-            line-height: 28px;
-            margin: 0 150px 50px 30px;
+            margin: 0 100px 50px 100px;
         }
     }
 
@@ -71,17 +72,15 @@
 
 @media screen and (min-width:1024px) {
     .homeCon {
-        border: 1.6px solid;
+
         h1 {
             font-size: 190px;
             line-height: 221px;
-            margin: 0 auto 60px 60px;
+            margin: 0 100px 60px 100px;
         }
 
         p {
-            font-size: 24px;
-            line-height: 40px;
-            margin: 0 180px 50px 60px;
+            margin: 0 100px 50px 100px;
         }
     }
 } 
